# wordle

./: .gitignore  Cargo.toml  README.md  best_word.py  build.gradle.kts  clippy.toml  detekt.yml  gradle.properties  greedy.py  prek.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: build.yaml  detekt.yaml  fmt.yaml  lint.yaml  misspell.yaml  test.yaml  tombi.yaml  yamllint.yaml
examples/: interactive.rs  play.rs  top.rs
examples/common/: mod.rs
gradle/: libs.versions.toml
src/: client.rs  collections.rs  color.rs  constraints.rs  error.rs  game.rs  lib.rs
src/collections/: array_view.rs
src/collections/array_view/: tests.rs
src/game/: error.rs  letter.rs  round.rs  space.rs  tests.rs  word.rs
src/game/letter/: error.rs  tests.rs
src/game/round/: score.rs  tests.rs
src/game/round/score/: tests.rs
src/game/space/: letter_space.rs  tests.rs
src/game/space/letter_space/: tests.rs
src/game/word/: error.rs  tests.rs
src/main/kotlin/: Main.kt  Wordle.kt
src/main/kotlin/sh/adamcooper/wordle/: Main.kt  Wordle.kt
