[package]
name = "wordle"
version = "0.0.0"
edition = "2024"
description = "A library for playing and solving [Wordle](https://www.nytimes.com/games/wordle/index.html) puzzles"
readme = "README.md"
repository = "https://github.com/super-cooper/wordle"
license = "GPL-3.0-or-later"
keywords = ["game", "library", "wordle"]
categories = ["games"]

[lib]
name = "wordle"
path = "src/lib.rs"

[dev-dependencies]
assertables = { version = "10.1.0" }
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = { version = "0.10.4" }
clap = { version = "4.6.1", features = ["derive"] }
injectorpp = { version = "0.5.1" }
log = { version = "0.4.32" }
mockall = { version = "0.14.0" }
proptest = { version = "1.11.0" }
reqwest = { version = "0.13.4", features = ["blocking", "json", "native-tls"] }
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }

[lints.clippy]
alloc_instead_of_core = "deny"
allow_attributes_without_reason = "deny"
assertions_on_result_states = "deny"
assigning_clones = "deny"
bool_to_int_with_if = "deny"
branches_sharing_code = "deny"
cargo_common_metadata = "deny"
cast_lossless = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
cfg_not_test = "deny"
checked_conversions = "deny"
clear_with_drain = "deny"
clone_on_ref_ptr = "deny"
cloned_instead_of_copied = "deny"
coerce_container_to_any = "deny"
collapsible_else_if = "deny"
collection_is_never_read = "deny"
comparison_chain = "deny"
copy_iterator = "deny"
create_dir = "deny"
dbg_macro = "warn"
debug_assert_with_mut_call = "deny"
decimal_bitwise_operands = "deny"
decimal_literal_representation = "deny"
default_trait_access = "deny"
default_union_representation = "deny"
deref_by_slicing = "deny"
derive_partial_eq_without_eq = "deny"
doc_broken_link = "deny"
doc_include_without_cfg = "deny"
doc_link_code = "deny"
doc_link_with_quotes = "deny"
doc_paragraphs_missing_punctuation = "deny"
duration_suboptimal_units = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_enums = "deny"
empty_structs_with_brackets = "deny"
enum_glob_use = "deny"
equatable_if_let = "deny"
exit = "deny"
expect_used = "deny"
expl_impl_clone_on_copy = "deny"
explicit_deref_methods = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
fallible_impl_from = "deny"
filetype_is_file = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
fn_params_excessive_bools = "deny"
fn_to_numeric_cast_any = "deny"
format_collect = "deny"
format_push_string = "deny"
from_iter_instead_of_collect = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
ignore_without_reason = "deny"
implicit_clone = "deny"
implicit_hasher = "deny"
imprecise_flops = "deny"
inconsistent_struct_constructor = "deny"
index_refutable_slice = "deny"
infinite_loop = "deny"
# inline_modules = "deny"
# inline_trait_bounds = "deny"
into_iter_without_iter = "deny"
invalid_upcast_comparisons = "deny"
ip_constant = "deny"
items_after_statements = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
iter_not_returning_iterator = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
iter_with_drain = "deny"
iter_without_into_iter = "deny"
large_include_file = "deny"
large_stack_arrays = "deny"
large_stack_frames = "deny"
large_types_passed_by_value = "deny"
let_underscore_must_use = "deny"
linkedlist = "deny"
literal_string_with_formatting_args = "deny"
lossy_float_literal = "deny"
macro_use_imports = "deny"
# manual_assert_eq = "deny"
manual_instant_elapsed = "deny"
manual_is_power_of_two = "deny"
manual_is_variant_and = "deny"
manual_let_else = "deny"
manual_midpoint = "deny"
manual_string_new = "deny"
map_err_ignore = "deny"
map_unwrap_or = "deny"
map_with_unused_argument_over_ranges = "deny"
match_bool = "deny"
match_same_arms = "deny"
match_wild_err_arm = "deny"
match_wildcard_for_single_variants = "deny"
mismatching_type_param_order = "deny"
missing_const_for_fn = "deny"
missing_errors_doc = "deny"
missing_fields_in_debug = "deny"
missing_panics_doc = "deny"
mixed_read_write_in_expression = "deny"
mod_module_files = "deny"
module_name_repetitions = "deny"
multiple_unsafe_ops_per_block = "deny"
mut_mut = "deny"
needless_bitwise_bool = "deny"
needless_collect = "deny"
needless_continue = "deny"
needless_for_each = "deny"
needless_pass_by_ref_mut = "deny"
needless_pass_by_value = "deny"
needless_raw_string_hashes = "deny"
needless_raw_strings = "deny"
needless_type_cast = "deny"
negative_feature_names = "deny"
no_effect_underscore_binding = "deny"
no_mangle_with_rust_abi = "deny"
non_send_fields_in_send_ty = "deny"
non_std_lazy_statics = "deny"
non_zero_suggestions = "deny"
nonstandard_macro_braces = "deny"
option_as_ref_cloned = "deny"
option_if_let_else = "deny"
option_option = "deny"
or_fun_call = "deny"
panic_in_result_fn = "deny"
path_buf_push_overwrite = "deny"
pathbuf_init_then_push = "deny"
pointer_format = "deny"
precedence_bits = "deny"
pub_underscore_fields = "deny"
pub_without_shorthand = "deny"
range_minus_one = "deny"
range_plus_one = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
read_zero_byte_vec = "deny"
redundant_clone = "deny"
redundant_closure_for_method_calls = "deny"
redundant_else = "deny"
redundant_feature_names = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
ref_as_ptr = "deny"
ref_binding_to_reference = "deny"
ref_option = "deny"
ref_option_ref = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
return_self_not_must_use = "deny"
same_length_and_capacity = "deny"
same_name_method = "deny"
search_is_some = "deny"
semicolon_if_nothing_returned = "deny"
separated_literal_suffix = "deny"
shadow_same = "deny"
should_panic_without_expect = "deny"
significant_drop_in_scrutinee = "deny"
significant_drop_tightening = "deny"
single_char_pattern = "deny"
single_match_else = "deny"
single_option_map = "deny"
stable_sort_primitive = "deny"
str_split_at_newline = "deny"
string_lit_as_bytes = "deny"
string_lit_chars_any = "deny"
struct_field_names = "deny"
suboptimal_flops = "deny"
suspicious_operation_groupings = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
todo = "deny"
too_long_first_doc_paragraph = "deny"
trailing_empty_array = "deny"
trait_duplication_in_bounds = "deny"
trivial_regex = "deny"
trivially_copy_pass_by_ref = "deny"
try_err = "deny"
tuple_array_conversions = "deny"
type_repetition_in_bounds = "deny"
unchecked_time_subtraction = "deny"
undocumented_unsafe_blocks = "deny"
uninhabited_references = "deny"
uninlined_format_args = "deny"
unnecessary_box_returns = "deny"
unnecessary_debug_formatting = "deny"
unnecessary_join = "deny"
unnecessary_literal_bound = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_struct_initialization = "deny"
unnecessary_trailing_comma = "deny"
unnecessary_wraps = "deny"
unneeded_field_pattern = "deny"
unnested_or_patterns = "deny"
unsafe_derive_deserialize = "deny"
unused_async = "deny"
unused_peekable = "deny"
unused_result_ok = "deny"
unused_rounding = "deny"
unused_self = "deny"
unwrap_in_result = "deny"
use_self = "deny"
used_underscore_binding = "deny"
used_underscore_items = "deny"
useless_let_if_seq = "deny"
verbose_bit_mask = "deny"
verbose_file_reads = "deny"
while_float = "deny"
wildcard_dependencies = "deny"
wildcard_imports = "deny"
zero_sized_map_values = "deny"

[lints.rust]
missing_docs = "deny"
warnings = "deny"
